feat: добавить модалку - логин

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
   "liveServer.settings.port": 5501,
-  "cSpell.words": ["Navibar", "Notificator", "Signin", "signup"]
+  "cSpell.words": ["Navibar", "Notificator", "setshow", "Signin", "signup"]
 }
